# Vazon-v3

./: AGENTS.md  CMakeLists.txt  README.md  sdkconfig.defaults
components/adc_service/: CMakeLists.txt  vazon_adc_service.c
components/app_core/: CMakeLists.txt  vazon_app_core.c
components/app_core/include/: vazon_app_core.h
components/board_config/: CMakeLists.txt
components/climate_module/: CMakeLists.txt  vazon_climate_module.c
components/command_router/: CMakeLists.txt  vazon_command_router.c
components/connection_config/: CMakeLists.txt  vazon_connection_config.c
components/door_module/: CMakeLists.txt  vazon_door_module.c
components/fan_module/: CMakeLists.txt  vazon_fan_module.c
components/gpio_inputs/: CMakeLists.txt  vazon_gpio_inputs.c
components/gpio_outputs/: CMakeLists.txt  vazon_gpio_outputs.c
components/humidifier_module/: CMakeLists.txt  vazon_humidifier_module.c
components/i2c_service/: CMakeLists.txt  vazon_i2c_service.c
components/light_module/: CMakeLists.txt  vazon_light_module.c
components/mqtt_command_codec/: CMakeLists.txt  vazon_mqtt_command_codec.c
components/mqtt_command_queue/: CMakeLists.txt  vazon_mqtt_command_queue.c
components/mqtt_service/: CMakeLists.txt  vazon_mqtt_service.c
components/onewire_service/: CMakeLists.txt  idf_component.yml  vazon_onewire_service.c
docs/: _index.md  firmware_skeleton.md  migration_rules.md  mqtt_topic_registry.md  open_questions.md  project_overview.md  software_architecture.md  ui_architecture.md  v3_data_model.md
main/: CMakeLists.txt  app_main.c
ui/pwa/: README.md  (+3 more)
(+71 files in other folders)
